# study

./: README.md
CppTest/: calculator.cpp
StudyTest/CTest/: protocol.c  protocol.h
StudyTest/CTest/algorithm/: cubic_spline_interpolation.c  linear_interpolation.c  polynomial_fitting.c
StudyTest/RandomNumerGenerator/: randomgenerator.py
TestApp/: build.gradle
TestApp/app/: CMakeLists.txt  build.gradle
TestApp/app/src/main/cpp/: const.cpp  const.h  constructor.cpp  constructor.h  cpplearn.cpp  cpplearn.h  overloadcomma.cpp  overloadcomma.h  smartpoint.cpp  smartpoint.h  virtualclass.cpp  virtualclass.h
TestApp/app/src/main/java/com/example/testapp/: MainActivity.kt
TestApp/app/src/main/python/: pythontest.py
TestApp/gradle/wrapper/: gradle-wrapper.properties
audio_dsp/: CMakeLists.txt  NOTES.md  README.md
audio_dsp/src/: CMakeLists.txt
audio_dsp/src/common/: wav_io.cpp  wav_io.h
audio_dsp/src/dsp_core/: dsp_core.cpp  dsp_core.h  fft.h  hpf.cpp  hpf.h  noise_suppressor.cpp  noise_suppressor.h  stft.cpp  stft.h
audio_dsp/src/offline_processor/: main.cpp
